--- a/src/scss/modals/_mobile_menu.scss
+++ b/src/scss/modals/_mobile_menu.scss
@@ -11,7 +11,7 @@
   background-color: $white;
   box-shadow: 0 1px 0 0 $alabaster;
   border: 1px solid $alabaster;
-  z-index: 99999;
+  z-index: 9999;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   -webkit-tap-highlight-color: transparent;
 
@@ -35,6 +35,7 @@
     position: absolute;
     top: 25px;
     right: 21px;
+    z-index: 99998;
   }
 
   &__products-list,
